# mix

./: .gitignore  README.md  apps.ss  assets.ss  auth.ss  config.ss  db.ss  dotnet_packages.txt  examples.ss  features.ss  files.ss  init-material-icons.ss  init.sc  kamal-migrate-templates.sh  kamal-migrate.sh  libraries.ss  move.ss  mq.ss  private.ss  sqlite.ss  svg.ss  sync-gh-actions.sh  sync.bat  view_init.sh
.ionide/: symbolCache.db
actions/dotnet-build/: .publish
actions/jamstack-litestream-aws/: _init
actions/jamstack-litestream-azure/: .publish
actions/jamstack-litestream-sftp/: .publish
actions/kamal/: .publish
actions/litestream-azure/: .publish
actions/litestream-sftp/: .publish
actions/release-ecr-aws/: .publish
actions/release-ecr-vanilla/: .publish
actions/release-ghr-vanilla/: .publish  docker-compose.yml
actions/release-hub-vanilla/: .publish
apps/admin-ui/: app.settings
apps/autodto/: app.settings
apps/blog/: .publish  _assert-post-partial.html  _editor-partial.html  _init.html  _layout.html  _posts-partial.html  app.settings  default.css  index.html  preview.html
apps/plugins/: _layout.html  app.settings
apps/redis/: .publish  _layout.html  app.settings
apps/redis-vue/: _layout.html  app.settings
apps/rockwind/: _init.html  app.settings  index.html
apps/sharpdata/: app.settings
apps/spirals/: .publish  (+5 more)
init/console-rust/: Cargo.toml
init/console-rust/src/: main.rs
kamal-migration/: kamal-migrate-templates.sh  update-route-53.sh
pvq/: sync.sh
scripts/: array.ss  aws.ss  github.ss
sqlite/: .publish
(+549 files in other folders)
