[package]
name = "my_app"
version = "0.1.0"
authors = ["ServiceStack, Inc. <team@servicestack.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gistcafe = "0.1.2"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
